corrections and finished search test
